# rxwrvdemo

./: ipcweb-ng.txt
alientek/QDesktop/: .gitignore  S50QDesktop
alientek/QDesktop/board/: board.cpp  board.h
alientek/QDesktop/calculator/: Calbutton.qml  Calculator.qml  Calculator_Window.qml  Display.qml  NumberPad.qml  calculator.pri  calculator.pro  calculator_icons.qrc  calculator_qml.qrc  main.cpp
alientek/QDesktop/camera/: ATKCamera.qml  ATKCamera_Window.qml  MoreCamera.qml  camera.pri  camera.pro  camera_icons.qrc  camera_qml.qrc  cameraitem.cpp  cameraitem.h  camerathread.cpp  camerathread.h  capturethread.h  main.cpp  photothread.h
alientek/QDesktop/cardvr/: Cardvr.qml  Cardvr_Window.qml  cardvr.pri  cardvr.pro  cardvr_qml.qrc  cardvrcamerathread.cpp  cardvrcamerathread.h  cardvrcapturethread.h  cardvritem.cpp  cardvritem.h  covertomp4thread.h  main.cpp
alientek/QDesktop/desktop/: CircleProcBar.qml  Page1.qml  Page2.qml  QDesktop.pro  QmlEvent.qml  deskop_sounds.qrc  desktop_fonts.qrc  desktop_icons.qrc  desktop_images.qrc  desktop_qml.qrc  main.cpp  main.qml  qtquickcontrols2.conf
alientek/QDesktop/facedetection/: FaceDetection.qml  FaceDetection_Window.qml  facedetection.pri  facedetection.pro  facedetection_icons.qrc  facedetection_qml.qrc  facedetectioncamerathread.cpp  facedetectioncamerathread.h  facedetectioncapturethread.h  facedetectionitem.cpp  facedetectionitem.h  main.cpp
alientek/QDesktop/factorytest/: FactoryTest.qml  FactoryTest_Window.qml  factory.cpp  factory.h  factorytest.pri  factorytest.pro  factorytest_qml.qrc  keysthread.cpp  keysthread.h  main.cpp  shelltest.cpp  shelltest.h
alientek/atk_rkmedia/: CMakeLists.txt
cvr_app/: CMakeLists.txt  main.c
cvr_app/src/hal/: drm_display.c  drm_display.h  evdev.c  evdev.h
cvr_app/src/lvgl/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
cvr_app/src/media/: player.c  preview.c  preview.h  recorder.c  recorder.h
cvr_app/src/resource/: resource_manager.c  resource_manager.h
cvr_app/src/ui/: lv_freetype.h  main_view.c  main_view.h  media_lib.c  media_lib.h  player.c  player.h  settings.c  settings.h
ipcweb-ng/src/: index.html  main.ts
storage_manager/: manage.c
(+159 files in other folders)
